fix style - align the footer text on a single line

--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ input {
 #footerText{
     width: 200px;
     text-align: end;
+    flex: auto;
 }
 footer {
     display: flex;
